# falco-plugin-aws-elb

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  rustfmt.toml
.github/workflows/: rust-ci.yaml
contrib/: debug_rules.yaml  falco-vm.yaml  falco.yaml  init-s3.py  localstack.yaml
rules/: awselb_rules.yaml
src/: aws.rs  lib.rs
