[package]
name = "awselb"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
falco_plugin = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
aws-config = "1.0"
aws-sdk-s3 = "1.0"
aws-sdk-elasticloadbalancingv2 = "1.0"
anyhow = "1.0"
regex = "1.0"
shlex = "1.3"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
